force-app/sfpegCampaignUtility/objects/sfpegCampaignMbrRT__mdt/sfpegCampaignMbrRT__mdt.object-meta.xml
<CustomObject>
    <description>Configuration of the campaign management features of the PEG_APEX repository (sfpegApex-campaigns unlocked package)</description>
    <label>CampaignMember RT</label>
    <pluralLabel>CampaignMember RTs</pluralLabel>
</CustomObject>