force-app/sfpegCampaignUtility/objects/sfpegCampaignMbrRT__mdt/fields/CmStatuses__c.field-meta.xml
<CustomField>
    <fullName>CmStatuses__c</fullName>
    <description>List of CampaignMember status value to automatically initialize for a newly created Campaign (as a JSON List of status records)</description>
    <inlineHelpText>List of CampaignMember status value to automatically initialize for a newly created Campaign (as a JSON List of status records)</inlineHelpText>
    <label>CM Statuses</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>