force-app/sfpegCampaignUtility/objects/sfpegCampaignMbrRT__mdt/fields/CmStatusesAfter__c.field-meta.xml
<CustomField>
    <fullName>CmStatusesAfter__c</fullName>
    <description>List of CampaignMember status value to automatically initialize for a newly created Campaign after default status cleaning (as a JSON List of status records). Setting values here automatically triggers cleaning.</description>
    <inlineHelpText>List of CampaignMember status value to automatically initialize for a newly created Campaign after default status cleaning (as a JSON List of status records). Setting values here automatically triggers cleaning.</inlineHelpText>
    <label>CM Statuses (after cleaning)</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>