force-app/sfpegCampaignUtility/objects/sfpegCampaignMbrRT__mdt/fields/CmTypes__c.field-meta.xml
<CustomField>
    <fullName>CmTypes__c</fullName>
    <defaultValue>&apos;Lead;Contact&apos;</defaultValue>
    <description>List of SObject types allowed as member (in a multi-picklist selection format of Account, Contact and/or Lead values)</description>
    <inlineHelpText>List of SObject types allowed as member (in a multi-picklist selection format of Account, Contact and/or Lead values)</inlineHelpText>
    <label>CM Types Allowed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>