force-app/sfpegCampaignUtility/objects/sfpegCampaignMbrRT__mdt/fields/HierarchyPropagation__c.field-meta.xml
<CustomField>
    <fullName>HierarchyPropagation__c</fullName>
    <description>Configuration of the Campaign fields to copy for hierarchy propagation (#Sent, Budget, Cost), as a JSON mapping of target/source fields on the Campaign object, based on the CampaignMemberRecordTypeId set on the Campaign.</description>
    <inlineHelpText>Configuration of the Campaign fields to copy for hierarchy propagation (#Sent, Budget, Cost), as a JSON mapping of target/source fields on the Campaign object, based on the CampaignMemberRecordTypeId set on the Campaign.</inlineHelpText>
    <label>Hierarchy Propagation</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>